add allowlist to /references/backend

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -63,3 +63,18 @@ Organization operations are exposed under `clerkClient.organization`. The follow
 - [`deleteOrganizationMembership()`](/docs/references/backend/organization/delete-organization-membership)
 - [`revokeOrganizationInvitation()`](/docs/references/backend/organization/revoke-organization-invitation)
 
+## Allowlist Identifiers operations
+
+Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentifiers`. The following methods are available:
+
+### Get
+
+- [`getAllowlistIdentifierList()`](/docs/references/backend/allowlist/get-allowlist-identifier-list)
+
+### Create
+
+- [`createAllowlistIdentifier()`](/docs/references/backend/allowlist/create-allowlist-identifier)
+
+### Delete
+
+- [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
