applying changes from code review

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Clerk Backend SDK
-description: 
+description: The Clerk Backend SDK exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments.
 ---
 
 # Clerk Backend SDK
