--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -18,5 +18,5 @@ const allowlistIdentifier = await clerkClient.allowlistIdentifiers.createAllowli
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `identifier` | `string` | The `identifier` can be - A phone number in international [E.164](https://en.wikipedia.org/wiki/E.164) format. - An email address. - A wildcard email address (*.domain.com). Use this identifier value to allow any email address in a particular email domain. |
+| `identifier` | `string` | The `identifier` can be: a phone number in international [E.164](https://en.wikipedia.org/wiki/E.164) format, an email address, or a wildcard email address (*.domain.com). Use this identifier value to allow any email address in a particular email domain. |
 | `notify` | `boolean` | Whether to notify the owner of the identifier. The `notify` property is not available for wildcard identifiers. |
