--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -78,3 +78,11 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 ### Delete
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
+
+## Client operations
+
+### Get
+
+- [`getClient()`](/docs/references/backend/client/get-client)
+- [`getClientList()`](/docs/references/backend/client/get-client-list)
+- [`verifyClient()](/docs/references/backend/client/verify-client)
