fix missing backtick

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -85,4 +85,4 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 
 - [`getClient()`](/docs/references/backend/client/get-client)
 - [`getClientList()`](/docs/references/backend/client/get-client-list)
-- [`verifyClient()](/docs/references/backend/client/verify-client)
+- [`verifyClient()`](/docs/references/backend/client/verify-client)
