add invitations to /backend/references

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -78,3 +78,17 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 ### Delete
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
+
+## `Invitation` operations
+
+### Get
+
+- [`getInvitationList()`](/docs/references/backend/invitations/get-invitation-list)
+
+### Create
+
+- [`createInvitation()`](/docs/references/backend/invitations/create-invitation)
+
+### Delete
+
+- [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
