add sessions to /backend/references

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -78,3 +78,16 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 ### Delete
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
+
+## Session operations
+
+### Get
+
+- [`getSession()`](/docs/references/backend/sessions/get-session)
+- [`getSessionList()`](/docs/references/backend/sessions/get-session-list)
+- [`getToken()`](/docs/references/backend/sessions/get-token)
+- [`verifySession()`](/docs/references/backend/sessions/verify-session)
+
+### Delete
+
+- [`revokeSession()`](/docs/references/backend/sessions/revoke-session)
