apply changes from code review

--- a/docs/references/backend/client/get-client-list.mdx
+++ b/docs/references/backend/client/get-client-list.mdx
@@ -5,7 +5,7 @@ description: Retrieves the list of clients.
 
 # `getClientList()`
 
-Retrieves the list of clients:
+Retrieves the list of clients.
 
 ```tsx
 const clients = await clerkClient.clients.getClientList();
