--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -5,7 +5,7 @@ description: Retrieves a client for a given session token, if the session is act
 
 # `verifyClient()`
 
-Retrieves a client for a given session token, if the session is active:
+Retrieves a client for a given session token, if the session is active.
 
 ```tsx
 const sessionToken = 'my-session-token';
