add emails and sms-message to /backend/references

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -78,3 +78,19 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 ### Delete
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
+
+## Email operations
+
+Email operations are exposed under `clerkClient.emails`. The following methods are available:
+
+### Create
+
+- [`createEmail()`](/docs/references/backend/emails/create-email)
+
+## SMS message operations
+
+SMS message operations are exposed under `clerkClient.smsMessages`. The following methods are available:
+
+### Create
+
+- [`createSMSMessage()`](/docs/references/backend/sms-message/create-sms-message)
