small content updates

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -79,7 +79,9 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
 
-## `Invitation` operations
+## Invitation operations
+
+Invitation operations are exposed under `clerkClient.invitations`. The following methods are available:
 
 ### Get
 
