update overview to use consistent language/formatting

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -81,6 +81,8 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 
 ## Session operations
 
+Session operations are exposed under `clerkClient.sessions`. The following methods are available:
+
 ### Get
 
 - [`getSession()`](/docs/references/backend/sessions/get-session)
