--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -81,8 +81,27 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 
 ## Client operations
 
+Client operations are exposed under `clerkClient.clients`. The following methods are available:
+
 ### Get
 
 - [`getClient()`](/docs/references/backend/client/get-client)
 - [`getClientList()`](/docs/references/backend/client/get-client-list)
 - [`verifyClient()`](/docs/references/backend/client/verify-client)
+
+
+## Invitation operations
+
+Invitation operations are exposed under `clerkClient.invitations`. The following methods are available:
+
+### Get
+
+- [`getInvitationList()`](/docs/references/backend/invitations/get-invitation-list)
+
+### Create
+
+- [`createInvitation()`](/docs/references/backend/invitations/create-invitation)
+
+### Delete
+
+- [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
