feat: add emails and sms-message to /backend/references (#178)

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -105,3 +105,19 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 ### Delete
 
 - [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
+
+## Email operations
+
+Email operations are exposed under `clerkClient.emails`. The following methods are available:
+
+### Create
+
+- [`createEmail()`](/docs/references/backend/emails/create-email)
+
+## SMS message operations
+
+SMS message operations are exposed under `clerkClient.smsMessages`. The following methods are available:
+
+### Create
+
+- [`createSMSMessage()`](/docs/references/backend/sms-message/create-sms-message)
