feat: add sessions to /backend/references (#177)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -79,6 +79,21 @@ Allowlist Identifiers operations are exposed under `clerkClient.allowlistIdentif
 
 - [`deleteAllowlistIdentifier()`](/docs/references/backend/allowlist/delete-allowlist-identifier)
 
+## Session operations
+
+Session operations are exposed under `clerkClient.sessions`. The following methods are available:
+
+### Get
+
+- [`getSession()`](/docs/references/backend/sessions/get-session)
+- [`getSessionList()`](/docs/references/backend/sessions/get-session-list)
+- [`getToken()`](/docs/references/backend/sessions/get-token)
+- [`verifySession()`](/docs/references/backend/sessions/verify-session)
+
+### Delete
+
+- [`revokeSession()`](/docs/references/backend/sessions/revoke-session)
+
 ## Client operations
 
 Client operations are exposed under `clerkClient.clients`. The following methods are available:
