fix: fix remaining broken links

--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -9,7 +9,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `SignUp`
 
-The `SignUp` object holds the state of the current sign up and provides helper methods to navigate and complete the [sign up flow](/docs/custom-flows). Once a sign up is complete, a new user is created.
+The `SignUp` object holds the state of the current sign up and provides helper methods to navigate and complete the [sign up flow](/docs/custom-flows/overview#sign-up-flow). Once a sign up is complete, a new user is created.
 
 There are two important steps that need to be done in order for a sign up to be completed:
 
