last minute touch ups

--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -10,7 +10,7 @@ Deletes an organization given a valid ID. Throws an error otherwise.
 ```tsx
 const organizationId = 'my-organization-id';
 
-const organization = await clerk.organizations.deleteOrganization(organizationId);
+const organization = await clerkClient.organizations.deleteOrganization(organizationId);
 ```
 
 ## Required params 
