--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -1,21 +1,23 @@
 ---
 title: getOrganizationMembershipList()
-description: Retrieves organization membership list.
+description: Retrieves a list of memberships for an organization.
 ---
 
 # `getOrganizationMembershipList()`
 
-Retrieves organization membership list:
+Retrieves a list of memberships for an organization.
 
 ```tsx
-const memberships = await clerkClient.organizations.getOrganizationMembershipList();
+const organizationId = 'my-organization-id';
+
+const memberships = await clerkClient.organizations.getOrganizationMembershipList({ organizationId });
 ```
 
 ## `GetOrganizationMembershipListParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The ID of the organization to retrieve. |
+| `organizationId` | `string` | The ID of the organization to retrieve the list of memberships from. |
 | `limit?` | `number` | The number of results to return. |
 | `offset?` | `number` | The number of results to skip. |
 
@@ -26,7 +28,10 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 Retrieves orgnanization membership list that is filtered by the number of results:
 
 ```tsx
+const organizationId = 'my-organization-id';
+
 const memberships = await clerkClient.organizations.getOrganizationMembershipList({
+  organizationId,
   // returns the first 10 memberships
   limit: 10,
 });
