--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -5,14 +5,12 @@ description: Retrieves a single organization by the organization ID, if the ID i
 
 # `getOrganization()`
 
-Retrieves a single organization by the organization ID, if the ID is valid, or by the organization slug.
+Retrieves a single organization by the organization ID, if the ID is valid. Throws an error if the organization ID is invalid.
 
 ```tsx
 const organizationId = 'my-organization-id';
 
-const organization = await clerkClient.organizations.getOrganization({
-  organizationId
-});
+const organization = await clerkClient.organizations.getOrganization({ organizationId });
 ```
 
 ## `GetOrganizationParams`
@@ -23,14 +21,12 @@ const organization = await clerkClient.organizations.getOrganization({
 
 ## Example
 
-### `getOrganization( { slug })`
+### `getOrganization(slug)`
 
-Retrieve an organization by its slug.
+Retrieve an organization by its slug instead of its ID.
 
 ```tsx
-const organizationSlug = 'my-organization-slug';
+const slug = 'my-organization-slug';
 
-const organization = await clerkClient.organizations.getOrganization({
-  slug: organizationSlug
-});
+const organization = await clerkClient.organizations.getOrganization({ slug });
 ```
