--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -5,7 +5,7 @@ description: Updates a user's organization membership parameters.
 
 # `updateOrganizationMembership()`
 
-Updates a user's organization membership parameters.
+Updates a user's organization membership parameters. Currently, only the role can be updated.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -21,6 +21,6 @@ const organization = await clerkClient.organizations.updateOrganizationMembershi
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The organization ID of the organization a user is being added to. |
-| `userId` | `string` | The user ID of the user being added to the organization. |
-| `role` | `OrganizationMembershipRole` | The role to assign the added user within the organization. |
+| `organizationId` | `string` | The organization ID of the organization a user belongs to. |
+| `userId` | `string` | The ID of the user. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role to assign to the user. |
