--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -5,7 +5,7 @@ description: Updates the organization name.
 
 # `updateOrganization()`
 
-Updates the organization name.
+Updates an organization given a valid organization ID. Throws an error if the organization ID is invalid.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -20,4 +20,7 @@ const organization = await clerkClient.organizations.updateOrganization(organiza
 | Name | Type	| Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The organization ID of the organization being updated. |
-| `name` | `string` | The updated name of the organization. |
+| `name?` | `string` | The updated name of the organization. |
+| `slug?` | `string` | The updated slug of the organization. |
+| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
+| `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
