--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -35,7 +35,7 @@ User operations are exposed under `clerkClient.users`. The following methods are
 
 ## Organization operations
 
-Organization operations are exposed under `clerkClient.organization`. The following methods are available:
+Organization operations are exposed under `clerkClient.organizations`. The following methods are available:
 
 ### Get
 
