--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -3,7 +3,7 @@ title: deleteUser() | User Object
 description: Deletes a user given a valid ID. Throws an error otherwise.
 ---
 
-# `deleteUser(userId)`
+# `deleteUser()`
 
 Deletes a user given a valid ID. Throws an error otherwise.
 
@@ -12,3 +12,9 @@ const userId = 'my-user-id';
 
 const user = await clerkClient.users.deleteUser(userId);
 ```
+
+## Required parameters
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `userId` | `string` | The ID of the user to delete. |
