--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -5,7 +5,7 @@ description: The getUserList() method retrieves a list of users.
 
 # `getUserList()`
 
-Retrieves user list:
+Retrieves a list of users.
 
 ```tsx
 const users = await clerkClient.users.getUserList();
@@ -30,7 +30,7 @@ const users = await clerkClient.users.getUserList();
 
 ### `getUserList({ orderBy, limit })`
 
-Retrieves user list that is ordered and filtered by the number of results:
+Retrieves user list that is ordered and filtered by the number of results.
 
 ```tsx
 const sessions = await clerkClient.users.getUserList({
@@ -41,7 +41,7 @@ const sessions = await clerkClient.users.getUserList({
 
 ### `getUserList({ emailAddress, phoneNumber })`
 
-Retrieves user list that is filtered by the given email addresses and phone numbers:
+Retrieves user list that is filtered by the given email addresses and phone numbers.
 
 ```tsx
 const emailAddress = ['email1@clerk.dev', 'email2@clerk.dev'];
