--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -3,7 +3,7 @@ title: getUser() | User Object
 description: Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
 ---
 
-# `getUser(userId)`
+# `getUser()`
 
 Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
 
@@ -12,3 +12,9 @@ const userId = 'my-user-id';
 
 const user = await clerkClient.users.getUser(userId);
 ```
+
+## Required parameters
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `userId` | `string` | The ID of the user to retrieve. |
