--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -29,7 +29,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 | `primaryEmailAddressID?` | `string` | Email address that will replays user's current primary email address. Must be unique across your instance. |
 | `primaryPhoneNumberID?` | `string` | Phone number that will replace user's current primary phone number. Must be unique across your instance. |
 | `primaryWeb3WalletID?` | `string` | Web3 wallet that will replace user's current primary web3 wallet. Must be unique across your instance. |
-| `externalId` | `string` | An external identifier for the user. Must be unique across your instance. |
+| `externalId?` | `string` | An external identifier for the user. Must be unique across your instance. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
