--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -12,7 +12,9 @@ Revoking an invitation makes the invitation email link unusable. However, it doe
 Only active (i.e. non-revoked) invitations can be revoked.
 
 ```tsx
-const invitation = await clerkClient.invitations.revokeInvitation('inv_some-id');
+const invitationId = 'inv_some-id';
+
+const invitation = await clerkClient.invitations.revokeInvitation(invitationId);
 ```
 
 ## Required parameters
