--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -1,11 +1,11 @@
 ---
 title: getOrganizationList()
-description: Retrieves an organization list.
+description: Retrieves a list of organizations.
 ---
 
 # `getOrganizationList()`
 
-Retrieves an organization list:
+Retrieves a list of organizations.
 
 ```tsx
 const organizations = await clerkClient.organizations.
@@ -16,8 +16,8 @@ getOrganizationList();
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `limit` | `number` | The number of results to return. |
-| `offset` | `number` | The number of results to skip. |
+| `limit?` | `number` | The number of results to return. |
+| `offset?` | `number` | The number of results to skip. |
 | `query?` | `string` | The query to search for. |
 
 ## Example 
