--- a/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
@@ -8,14 +8,16 @@ description: Retrieves a list of organization invitations that have not yet been
 Retrieves a list of organization invitations that have not yet been accepted.
 
 ```tsx
-const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList();
+const organizationId = 'my-organization-id';
+
+const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({ organizationId });
 ```
 
 ## `GetPendingOrganizationInvitationListParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The ID of the organization to retrieve. |
+| `organizationId` | `string` | The ID of the organization to retrieve the list of pending invitations from. |
 | `limit?` | `number` | The number of results to return. |
 | `offset?` | `number` | The number of results to skip. |
 
@@ -26,7 +28,10 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
 Retrieves orgnanization invitation list that is filtered by the number of results:
 
 ```tsx
+const organizationId = 'my-organization-id';
+
 const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({
+  organizationId,
   // returns the first 10 results
   limit: 10,
 });
