--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -340,7 +340,7 @@ export default async function handler(
     Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
     ```tsx copy filename="page.tsx"
-    import { currentUser } from "@clerk/nextjs/app-beta";
+    import { currentUser } from "@clerk/nextjs";
     import type { User } from "@clerk/nextjs/api";
 
     export default async function Page() {
@@ -356,7 +356,7 @@ export default async function handler(
     Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
     ```tsx copy filename="app/page.tsx"
-    import { auth } from '@clerk/nextjs/app-beta';
+    import { auth } from "@clerk/nextjs";
 
     export default function Page() {
       const { userId } : { userId: string | null } = auth();
