fix: Add signInUrl to ClerkApp options

--- a/docs/advanced-usage/multi-domain.mdx
+++ b/docs/advanced-usage/multi-domain.mdx
@@ -166,7 +166,8 @@ The `URL` mentioned above is the request url for server side usage or the curren
 
     export default ClerkApp(App, {
       isSatellite: true,
-      domain: (url) => url.host
+      domain: (url) => url.host,
+      signInUrl: 'https://primary.dev/sign-in',
     });
     ```
   </Tab>
